feat: blogger sign up, blogger log in, blogger products page, shop product create blogger task description
